clickgraph-go/clickgraph_ffi/clickgraph_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void* uniffi_clickgraph_ffi_fn_constructor_database_open_sql_only(RustBuffer schema_path, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_constructor_database_open_with_config(RustBuffer schema_path, RustBuffer config, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_method_database_connect(void* ptr, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_clone_graphresult(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_free_graphresult(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_clickgraph_ffi_fn_method_graphresult_edge_count(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_graphresult_edges(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_clickgraph_ffi_fn_method_graphresult_node_count(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_graphresult_nodes(void* ptr, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_clone_queryresult(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_free_queryresult(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_queryresult_column_names(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_queryresult_get_all_rows(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_queryresult_get_column_data_types(void* ptr, RustCallStatus *out_status
);
double uniffi_clickgraph_ffi_fn_method_queryresult_get_compiling_time(void* ptr, RustCallStatus *out_status
);
double uniffi_clickgraph_ffi_fn_method_queryresult_get_execution_time(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_queryresult_get_next(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_queryresult_get_write_counters(void* ptr, RustCallStatus *out_status
);
int8_t uniffi_clickgraph_ffi_fn_method_queryresult_has_next(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_clickgraph_ffi_fn_method_queryresult_num_rows(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_queryresult_reset(void* ptr, RustCallStatus *out_status
);
RustBuffer ffi_clickgraph_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_clickgraph_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_clickgraph_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_clickgraph_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_clickgraph_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_clickgraph_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_clickgraph_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_clickgraph_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_clickgraph_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_clickgraph_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_clickgraph_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_f32(uint64_t handle
);