clickgraph-py/clickgraph/_ffi.py

_UniffiLib.uniffi_clickgraph_ffi_fn_constructor_database_open_sql_only.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_constructor_database_open_sql_only.restype = ctypes.c_void_p
_UniffiLib.uniffi_clickgraph_ffi_fn_constructor_database_open_with_config.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_constructor_database_open_with_config.restype = ctypes.c_void_p
_UniffiLib.uniffi_clickgraph_ffi_fn_method_database_connect.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_database_connect.restype = ctypes.c_void_p
_UniffiLib.uniffi_clickgraph_ffi_fn_clone_graphresult.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_clone_graphresult.restype = ctypes.c_void_p
_UniffiLib.uniffi_clickgraph_ffi_fn_free_graphresult.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_free_graphresult.restype = None
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_edge_count.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_edge_count.restype = ctypes.c_uint64
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_edges.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_edges.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_node_count.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_node_count.restype = ctypes.c_uint64
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_nodes.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_graphresult_nodes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_clone_queryresult.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_clone_queryresult.restype = ctypes.c_void_p
_UniffiLib.uniffi_clickgraph_ffi_fn_free_queryresult.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_free_queryresult.restype = None
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_column_names.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_column_names.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_all_rows.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_all_rows.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_column_data_types.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_column_data_types.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_compiling_time.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_compiling_time.restype = ctypes.c_double
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_execution_time.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_execution_time.restype = ctypes.c_double
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_next.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_next.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_write_counters.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_get_write_counters.restype = _UniffiRustBuffer
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_has_next.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_has_next.restype = ctypes.c_int8
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_num_rows.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_num_rows.restype = ctypes.c_uint64
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_reset.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_clickgraph_ffi_fn_method_queryresult_reset.restype = None
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_free.restype = None
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_f32.argtypes = (
